--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,6 +27,19 @@ h2 {
 	background-color: #f26522 !important;
 }
 
+.text-hover-white:hover {
+	/*font-weight: bold;*/
+    text-shadow:
+    -.5px -.5px 0 #fff,
+    .5px -.5px 0 #fff,
+    -.5px .5px 0 #fff,
+    .5px .5px 0 #fff;
+    -webkit-transition: all .9s;
+    -moz-transition: all .9s;
+    -o-transition: all .9s;
+    transition: all .9s;
+}
+
 
 
 /* 
